# python_skeleton

./: Makefile  README.org  channels.scm  guix.scm  process-readme.el  setup.cfg
__PROJECT-NAME__/: __PROJECT-NAME__.py  __init__.py
