[metadata]
name = lickport_array_interface
version = attr: lickport_array_interface.__version__
author = Peter Polidoro
author_email = peter@polidoro.io
url = https://github.com/janelia-pypi/lickport_array_interface_python
description = Python interface to the Janelia Dudman lab mouse lickport array.
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    modular_client

[options.entry_points]
console_scripts =
    lai = lickport_array_interface.lickport_array_interface:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    lickport_array_interface.tests*

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
